# OSINT

./: Read For Build.txt  main.cpp
Tool/: audit.cpp  audit.h
include/: AsciiArt.h  ConsoleUtils.h  DataAnalyzer.h  NetworkAnalyzer.h  OSINTTool.h  WebServer.h
osint/: CMakeLists.txt  a lire.txt  ascii_animation.hpp  build.bat  build_all.bat  channel_monitor.hpp  cmake  config.json  discord_analyzer.hpp  http_client.hpp  main.cpp  member_analyzer.hpp  menu.cpp  start_server.js  steam_analyzer.hpp
osint/Tool/: tool.cpp  tool.h
osint/api/: api_client.cpp  api_client.h
osint/config/: api_config.cpp  api_config.h
osint/core/: core.cpp  core.h
osint/memory_scanner/: CMakeLists.txt  functions.json  main.cpp
osint/scripts/discord_scripts/: discord_analyzer.lua
osint/scripts/steam_scripts/: steam_analyzer.lua  steam_analyzer.py
osint/web_server/: CMakeLists.txt  app.js  package-lock.json  package.json
resources/: version.rc  version.rc.in
src/: AsciiArt.cpp  ConsoleUtils.cpp  DataAnalyzer.cpp  NetworkAnalyzer.cpp  OSINTTool.cpp  WebServer.cpp
web/static/: style.css
web/templates/: index.html
